# blender-qt-stylesheet

./: README.md  pyproject.toml
blender_stylesheet/: __init__.py  blender_stylesheet.qss
example/: demo_widget.py  example.py
